--- a/style.css
+++ b/style.css
@@ -6,5 +6,33 @@
     color: floralwhite;
     padding-top: 20px;
     padding-bottom: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: arial,sans-serif;
+}
+
+.box {
+    background-color: white;
+    border: 0px solid black;
+    height: 300px;
+    width: 50%;
+    box-shadow: 2px 2px 2px 2px grey;
+    border-radius: 15px;
+    left: 50%;
+    margin: auto;
+    padding: 10px;
+    margin-top: 70px;
+    font-family: arial,sans-serif;
+}
+
+.quantitySelector {
+    margin-top: 20px;
+    margin-left: 20px;
+    height: 40px;
+    width: 70%;
+    border: 0px solid black;
+    background-color: rgb(235, 231, 231);
+    border-radius: 7px;
+}
+
+.fromTo {
+    margin-left: 20px;
 }
