--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     border: 0px solid black;
     height: 300px;
     width: 50%;
-    box-shadow: 2px 2px 2px 2px grey;
+    box-shadow: 3px 3px 3px 3px rgb(223, 217, 217);
     border-radius: 15px;
     left: 50%;
     margin: auto;
@@ -28,11 +28,31 @@
     margin-left: 20px;
     height: 40px;
     width: 70%;
-    border: 0px solid black;
+    border: 1px solid black;
     background-color: rgb(235, 231, 231);
     border-radius: 7px;
 }
 
 .fromTo {
     margin-left: 20px;
+}
+
+.inputText {
+    height: 50px;
+    margin-right: 20px;
+    box-shadow: 2px 2px 2px 2px rgb(223, 217, 217);
+    border-radius: 10px;
+    border: 0px solid black;
+    width: 45%;
+}
+
+.unitSelect {
+    height: 50px;
+    margin-left: 20px;
+    box-shadow: 2px 2px 2px 2px rgb(223, 217, 217);
+    border-radius: 10px;
+    border: 0px solid black;
+    width: 45%;
+    float: right;
+    position: relative;
 }
