--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: rgb(204, 101, 90);
+}
+
 .header {
     background-color: rgb(38, 53, 53);
     height: 50px;
@@ -31,10 +39,13 @@
     border: 1px solid black;
     background-color: rgb(235, 231, 231);
     border-radius: 7px;
+    font-size: 1.1rem;
+    padding-left: 15px;
 }
 
 .fromTo {
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .inputText {
@@ -44,6 +55,8 @@
     border-radius: 10px;
     border: 0px solid black;
     width: 45%;
+    font-size: 1.2rem;
+    padding-left: 15px;
 }
 
 .unitSelect {
@@ -54,4 +67,27 @@
     width: 45%;
     float: right;
     position: relative;
+    font-size: 1.1rem;
+    padding-left: 15px;
+}
+
+.convert-button-div {
+    display: flex;
+    justify-content: center;
+    height: 5rem;
+    align-items: center;
+}
+
+.convert-button {
+    background-color: rgb(15, 56, 56);
+    height: 2.5rem;
+    color: white;
+    width: 6rem;
+    border-radius: 10px;
+    border: 0px solid black;
+    font-size: 1.1rem;
+}
+.convert-button:hover {
+    cursor: pointer;
+    background-color: rgb(25, 85, 85);
 }
